    * check_icmp: New WATO rule for custom PING checks
    * agent_vsphere: now able to handle < > & ' " in login credentials
    * if/if64 and friends: add 95% percentiles to graphs
    * services: inventory now also matches against display names of services
    * esx_vsphere_hostsystem.multipath: now able to set warn/crit levels
    * FIX: windows_agent: fixed bug in cleanup of open thread handles
    * FIX: cups default printer is now monitored again in linux agent
    * FIX: host notification email in html format: fixed formating error
           (typo in tag)
    * FIX: netapp_volumes: better output when volume is missing
    * FIX: winperf_phydisk: handle case where not performance counters are available
    * FIX: check_mk_agent.linux: limit Livestatus check to 3 seconds
    * FIX: esx_vsphere_vm: fixed exception when memory info for vm is missing
    * FIX: esx_vsphere_hostsystem: Fixed typo in check output

    Multisite:
    * FIX: add missing service icons to view "All Services with this descr..."
    * FIX: ldap attribute plugins: fixed crash when parameters are None
    * FIX: avoid duplicate output of log message in log tables
    * FIX: fixed problem with ldap userid encoding
    * FIX: removed state-based colors from all Perf-O-Meters
    * Filtering in views by Hostalias is possible now too
       (however the filter is not displayed in any standard view - user needs
       to enable it by customizing the needed views himself)
    * FIX: brocade_fcport pnp-template: fixed incorrect display of average values

    Livestatus-Proxy:
    * FIX: fix exception when printing error message
    * FIX: honor wait time (now called cooling period) after failed TCP connection
    * FIX: fix hanging if client cannot accept large chunks (seen on RH6.4)

    WATO:
    * Rule "State and count of processes": New configuration options:
           virtual and resident memory levels
    * Added title of tests to LDAP diagnose table