@@ -17,6 +17,7 @@
     * if/if64 and friends: add 95% percentiles to graphs
     * services: inventory now also matches against display names of services
     * esx_vsphere_hostsystem.multipath: now able to set warn/crit levels
+    * cpu_netapp: added Perf-O-Meter and PNP template
     * FIX: windows_agent: fixed bug in cleanup of open thread handles
     * FIX: cups default printer is now monitored again in linux agent
     * FIX: host notification email in html format: fixed formating error
